- fixed minor table error. - default text alignment is now "left" - fixed variable assignment in templates/menu.tpl
git-svn-id: https://svn.code.sf.net/p/postfixadmin/code/trunk@775 a1433add-5e2c-0410-b055-b7f2511e0802

--- a/css/default.css
+++ b/css/default.css
@@ -4,7 +4,7 @@ body {
 	font-family: "BitStream Vera Sans", Verdana, Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	font-weight: normal;
-	text-align: center;
+	text-align: left;
 }
 
 a {
@@ -25,6 +25,7 @@ table {
 	/* border-spacing: 0; */
 	/* padding: 0; */
 	border-collapse: collapse; /* for IE */
+	text-align: left;
 }
 
 .button {
